@@ -1,0 +1,10 @@
+<ivysettings>
+    <caches defaultCacheDir="${ivy.settings.dir}/../cache-fakerepo" useOrigin="false" />
+    <settings defaultResolver="fakerepo" checkUpToDate="false" defaultBranch="trunk" />
+    <resolvers>
+        <filesystem name="fakerepo">
+            <ivy pattern="${ivy.settings.dir}/../fakerepo-branch/[organisation]/[module]/[branch]/[revision]/ivy.xml"/>
+            <artifact pattern="${ivy.settings.dir}/../fakerepo-branch/[organisation]/[module]/[branch]/[revision]/[type]s/[artifact].[ext]"/>
+        </filesystem>
+    </resolvers>
+</ivysettings>
